--- a/.github/workflows/update-stats.yml
+++ b/.github/workflows/update-stats.yml
@@ -14,5 +14,5 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN}}
-          USERNAME: gautamkrishnar
+          USERNAME: karamusluk
           SHOW_TITLE: false
